--- a/static/share.html
+++ b/static/share.html
@@ -62,6 +62,28 @@
 </div>
 
 <div class="ui main text container">
+    <div id="secrets">
+        <div class="ui form">
+<!--            <div class="inline field">-->
+<!--                <div class="ui toggle checkbox">-->
+<!--                    <input type="checkbox" tabindex="0" class="hidden" id="is-md" name="is-md">-->
+<!--                    <label>Markdown mode</label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="field">-->
+<!--                <label>Message</label>-->
+<!--                <textarea id="txt"></textarea>-->
+<!--            </div>-->
+            <div class="field">
+                <label>Passphrase</label>
+                <input type="text" id="passphrase" placeholder="Passphrase">
+            </div>
+            <button class="ui labeled icon button" id="decrypt-btn">
+                <i class="key icon"></i>
+                Decrypt
+            </button>
+        </div>
+    </div>
     <div id="output" style="min-height: 1000px"></div>
     <!--<h1 class="ui header">Semantic UI Fixed Template</h1>
     <p id="output" style="min-height: 1000px">This is a basic fixed menu template using fixed size containers.</p>
