got client side crypto working

--- a/static/share.html
+++ b/static/share.html
@@ -4,11 +4,13 @@
     <script src="/static/vendor/js-nacl/lib/nacl_factory.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./vendor/semantic/semantic.min.js"></script>
+    <script src="/static/vendor/semantic/semantic.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
+    <script type="text/javascript" src="https://cdn.rawgit.com/ricmoo/aes-js/e27b99df/index.js"></script>
+    <script src="/static/js/crypto.js"></script>
     <script src="/static/js/main.js"></script>
+    <script src="/static/vendor/js-scrypt/browser/scrypt.js"></script>
 
     <style type="text/css">
         body {
