changed to vendor

--- a/static/share.html
+++ b/static/share.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="/static/vendor/semantic/semantic.min.css">
-    <script src="/static/vendor/js-nacl/lib/nacl_factory.js"></script>
+    <script src="/static/vendor/nacl_factory.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/static/vendor/semantic/semantic.min.js"></script>
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="https://cdn.rawgit.com/ricmoo/aes-js/e27b99df/index.js"></script>
     <script src="/static/js/crypto.js"></script>
     <script src="/static/js/main.js"></script>
-    <script src="/static/vendor/js-scrypt/browser/scrypt.js"></script>
+    <script src="/static/vendor/scrypt.js"></script>
 
     <style type="text/css">
         body {
