--- a/static/splash.html
+++ b/static/splash.html
@@ -212,7 +212,7 @@
             <h1 class="ui inverted header">
                 Bash like a <b>boss</b>.
             </h1>
-            <h2>The command-liner's tool of choice for to-do lists, blogging, secrets, configs, and much more.</h2>
+            <h2>The command-liner's tool of choice for storing, protecting, and sharing personal data.</h2>
             <div class="ui huge primary button" onclick="goToInstall();">Get Started <i class="right arrow icon"></i></div>
         </div>
 
@@ -222,9 +222,9 @@
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="six wide column">
-                    <h3 class="ui header">From your fellow command-liners</h3>
-                    <p>Cubby is an open-source (BSD License) tool for command-line users that provides a free
-                        "virtual cloud filesystem," which is easily accessible from any laptop, container, or cloud
+                    <h3 class="ui header">Cubby is a CLI-optimized tool for storing and sharing personal data</h3>
+                    <p>Cubby is an open-source (BSD License) tool for command-line users that provides a <strong>free
+                        "virtual cloud filesystem,"</strong> which is easily accessible from any laptop, container, or cloud
                         server you might use. Cubby can be used for anything from manging personal data to secret sharing
                         to blogging.</p>
                     <p>Cubby is end-to-end encrypted; all data you put into it will be encrypted at the source (i.e.
@@ -276,19 +276,26 @@ cubby search personal # Find blogs with tag #personal
 <!--        </div>-->
 <!--    </div>-->
 
-<!--    <div class="ui vertical stripe segment">-->
-<!--        <div class="ui text container">-->
-<!--            <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>-->
-<!--            <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>-->
-<!--            <a class="ui large button">Read More</a>-->
-<!--            <h4 class="ui horizontal header divider">-->
-<!--                <a href="#">Case Studies</a>-->
-<!--            </h4>-->
-<!--            <h3 class="ui header">Did We Tell You About Our Bananas?</h3>-->
-<!--            <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>-->
-<!--            <a class="ui large button">I'm Still Quite Interested</a>-->
-<!--        </div>-->
-<!--    </div>-->
+    <div class="ui vertical stripe segment">
+        <div class="ui text container">
+            <h3 class="ui header">Use Cases</h3>
+            <p>We have compiled a number of blog posts explaining common use cases of Cubby that we find particularly awesome, such as:</p>
+            <ol>
+                <li>Developer blogging</li>
+                <li>Maintaining privacy working on other computers</li>
+                <li>Unify configs across all laptops, servers, and containers</li>
+            </ol>
+            <a class="ui large button" onclick='document.location="https://github.com/jwvictor/cubby#use-case-examples";'>Full list</a>
+            <h4 class="ui horizontal header divider">
+                <a href="#">Use Cases</a>
+            </h4>
+            <h3 class="ui header">The easiest way to write an awesome developer blog</h3>
+            <p>As developers and technologists ourselves, we understand what you want when writing a blog: minimal overhead.</p>
+            <p>That's why Cubby lets you publish a blog post with a single shell command, with automatic Markdown rendering,
+                syntax highlighting, and (optionally) end-to-end encryption.</p>
+            <a class="ui large button" onclick='document.location="https://github.com/jwvictor/cubby#use-case-examples";'>Read more</a>
+        </div>
+    </div>
 
 
     <div class="ui inverted vertical footer segment">
@@ -314,7 +321,7 @@ cubby search personal # Find blogs with tag #personal
 <!--                    </div>-->
 <!--                </div>-->
                 <div class="seven wide column">
-                    <h4 class="ui inverted header">&copy; 2022 Jason Victor</h4>
+                    <h4 class="ui inverted header">&copy; 2022 Jason Victor (<a href="https://github.com/jwvictor">Github</a>)</h4>
                     <p>Everything on this page is licensed under the BSD License v3.</p>
                 </div>
             </div>
