--- a/static/share.html
+++ b/static/share.html
@@ -21,6 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/markdown.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/python.min.js"></script>
 
+    <title>Cubby: the command-liner's tool of choice for storing, protecting, and sharing personal data</title>
 
     <style type="text/css">
         body {
