--- a/static/share.html
+++ b/static/share.html
@@ -48,7 +48,7 @@
 
 <div class="ui fixed inverted menu" style="background-color: #467595">
     <div class="ui container">
-        <a href="#" class="header item">
+        <a href="https://www.cubbycli.com" class="header item">
             <img class="logo" src="/static/images/logo_blue.png">
             cubby
         </a>
