--- a/static/splash.html
+++ b/static/splash.html
@@ -209,6 +209,7 @@
         </div>
 
         <div class="ui text container">
+
             <h1 class="ui inverted header">
                 Bash like a <b>boss</b>.
             </h1>
@@ -222,6 +223,7 @@
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="six wide column">
+                    <h3 class="ui header"><img src="/static/images/logo.png"  /></h3>
                     <h3 class="ui header">Cubby is a CLI-optimized tool for storing and sharing personal data</h3>
                     <p>Cubby is an open-source (BSD License) tool for command-line users that provides a <strong>free
                         "virtual cloud filesystem,"</strong> which is easily accessible from any laptop, container, or cloud
