--- a/static/splash.html
+++ b/static/splash.html
@@ -211,9 +211,9 @@
         <div class="ui text container">
 
             <h1 class="ui inverted header">
-                Bash like a <b>boss</b>.
+                The <b>super fly</b> blob storage for command-liners.
             </h1>
-            <h2>The command-liner's tool of choice for storing, protecting, and sharing personal data.</h2>
+            <h2>Store, protect, and share personal data easily and efficiently. Use our command-line tool and Neovim plugin to integrate into your existing workflow.</h2>
             <div class="ui huge primary button" onclick="goToInstall();">Get Started <i class="right arrow icon"></i></div>
         </div>
 
