--- a/static/splash.html
+++ b/static/splash.html
@@ -211,9 +211,9 @@
         <div class="ui text container">
 
             <h1 class="ui inverted header">
-                The <b>super fly</b> blob storage for command-liners.
+                <b>Super fly</b> open-source blob storage.
             </h1>
-            <h2>Store, protect, and share personal data easily and efficiently. Use our command-line tool and Neovim plugin to integrate into your existing workflow.</h2>
+            <h2>Privacy-conscious, CLI-optimized, Neovim-ready. Store, protect, and share personal data easily and efficiently without touching your mouse.</h2>
             <div class="ui huge primary button" onclick="goToInstall();">Get Started <i class="right arrow icon"></i></div>
         </div>
 
